--- a/labeling-ui/Styles/main.scss
+++ b/labeling-ui/Styles/main.scss
@@ -117,10 +117,23 @@ div.popup-panel {
       margin: 0;
 
       .icon {
-        @include font-m();
+        // Not using the font size mixin here, since this would override the font face for fontawesome icons
+        font-size: $font-m;
         color: $color-ut-lightgrey-1;
         top: 2px;
         position: relative;
+      }
+
+      .icon.fa {
+        float: right;
+        top: 5px;
+      }
+
+      span {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        padding-right: 0;
       }
     }
 
